samples/_failures_safe/1761625354_bf1971_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a9d9c55.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_6a9d9c55.c:148:27: error: ‘TOKEN’ undeclared (first use in this function)
  148 |         if (token.type >= TOKEN
      |                           ^~~~~
./samples/SAFE/__tmp_6a9d9c55.c:148:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6a9d9c55.c:148:32: error: expected ‘)’ at end of input
  148 |         if (token.type >= TOKEN
      |            ~                   ^
      |                                )
./samples/SAFE/__tmp_6a9d9c55.c:148:9: error: expected declaration or statement at end of input
  148 |         if (token.type >= TOKEN
      |         ^~
./samples/SAFE/__tmp_6a9d9c55.c:148:9: error: expected declaration or statement at end of input
